--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,16 @@
 services:
-  api:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "${API_PORT}:${API_PORT}"
-    environment:
-      - POSTGRES_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}?sslmode=disable
-    depends_on:
-      - db
-    volumes:
-      - .:/app
-    env_file:
-      - .env
-
-  db:
-    image: postgres:17.0
+  postgres:
+    image: postgres:17
+    container_name: postgres_db
+    restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
+      - ${POSTGRES_PORT}:5432
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    env_file:
-      - .env
+
 volumes:
   postgres_data:
