New migrations and redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,33 @@ services:
       - ${POSTGRES_PORT}:5432
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - pgnetwork
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
+      PGADMIN_DEFAULT_PASSWORD: admin_password
+    ports:
+      - "8080:80"
+    networks:
+      - pgnetwork
+
+  redis:
+    image: redis:latest
+    container_name: redis_container
+    ports:
+      - "6379:6379"
+    networks:
+      - redis_network
+    restart: always
 
 volumes:
   postgres_data:
+
+networks:
+  pgnetwork:
+  redis_network:
+    driver: bridge
